Fixing RSVP form height and some changes to fix header on smaller screen

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3043,7 +3043,7 @@
 				}
 
 				#header h1 {
-					font-size: 2.5em;
+					font-size: 2.0em;
 				}
 
 				#header hr {
